Test baseline: keep the durable half, and split the scan out
TEST-BASELINE.md was two documents in one file: what a green run looks like, and a
per-release changelog of how it got that way. The changelog was only useful while it
was being written. Dropped, keeping every fact from it that still explains a failure:

- the two preconditions (a dirty pg-data volume, a dirty contents/), including the
  one-time cleanup for a tree that ran the suite before 3.0.0;
- why the two network tests fail and must not be loosened, and the Mockito
  listener-ordering trap that made two more look like network tests for nine years;
- the PostgreSQL-only failures that no longer happen, as the specification for what
  the schema-convergence scripts have to keep true;
- the checkstyle/PMD expectations and why the 37 warnings are not errors;
- what make cli-test covers, its 16 #FAILS skips, and the BGZF fixture requirement.

Two additions. "What a green suite does not tell you" collects the four classes of
defect that were invisible to the suite and were found by starting a server, with the
verify-* scripts that cover them. "Known gaps" is the inventory of what has never been
verified here at all - az://, the LLM round trip, PostgreSQL 17, a production-sized
upgrade, the Windows and x86_64 bundles, the CI workflow - so it stops living only in
a document that is about to be deleted.

Also records CI's expected counts (543/0/21 under -PexcludeNetworkTests), which is
what makes a red CI run a regression by construction.

SECURITY-SCAN.md is new and holds the reusable half of the vulnerability review: how
to re-scan (trivy rootfs, not fs, and why a source-tree scan sees no Java at all),
what the current numbers are, the four Java findings that are deliberately open, why
the base image bump would fix nothing, and the three pins that must not be "fixed".